--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ httpx = "^0.23.0"
 loguru = "^0.6.0"
 PyYAML = "^6.0"
 yarl = "^1.8.1"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
