feat: Added config option to request owner filtering on demand

--- a/src/.env
+++ b/src/.env
@@ -3,4 +3,5 @@ SLEEP_DELAY=3600  # sleep delay in seconds between runs (daemon mode)
 WIKI_REPO_NAME="robonomics-wiki"  # wiki repo name
 WIKI_REPO_OWNER="airalab"  # wiki repo owner account (organisation)
 TARGET_REPO_OWNERS = '["Multi-Agent-io", "airalab"]'  # only repos owned by this accounts (organisations) will be marked as tracked dependencies
+FILTER_REPOS_BY_OWNERS = "false"  # Whether to filter repositories by their owner or not
 GITHUB_API_TOKEN="YOUR_TOKEN_HERE"  # Github API token for the bot
