--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ PyYAML = "^6.0"
 yarl = "^1.8.1"
 python-dotenv = "^0.21.0"
 typed-getenv = "^0.1.2"
+httpx-cache = "^0.6.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
