--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+aiorwlock==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 anyio==3.6.1 ; python_version >= "3.10" and python_version < "4.0"
+attrs==21.4.0 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2022.9.24 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.5 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
+fasteners==0.17.3 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.12.0 ; python_version >= "3.10" and python_version < "4.0"
 httpcore==0.15.0 ; python_version >= "3.10" and python_version < "4.0"
+httpx-cache==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
 httpx==0.23.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
 loguru==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
+msgpack==1.0.4 ; python_version >= "3.10" and python_version < "4.0"
 multidict==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==0.21.0 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
