--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ yarl = "^1.8.1"
 python-dotenv = "^0.21.0"
 typed-getenv = "^0.1.2"
 httpx-cache = "^0.6.1"
+semantic-version = "^2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
