--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ multidict==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==0.21.0 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
 rfc3986[idna2008]==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
+semantic-version==2.10.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 typed-getenv==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
 win32-setctime==1.1.0 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
